# trajectory_analyzer

./: .gitmodules  CMakeLists.txt  TODO  data_analyzer.cpp
app/: CMakeLists.txt  trajectory_analyzer.cpp
app/include/: csv_helper.h
app/parameters/: parameters.yaml  trajectory_parameters.yaml
lib/: CMakeLists.txt
lib/csv_lib/: CMakeLists.txt
lib/discretization_lib/: CMakeLists.txt  discretization.h
lib/discretization_lib/src/: circle.cpp  line.cpp
lib/geometric_statistics_lib/: CMakeLists.txt  geometric_statistics.cpp  geometric_statistics.h
log/: 26_10_circle_delay_1ms.csv  27_10_lemniscate_delay_1ms.csv  27_10_lemniscate_delay_5ms.csv  start_finish
log/flight_logs/: 27_10_circle_delay_5ms.csv
log/test/: testdata.csv
utils/: csv_helper.cpp  csv_helper.h
